Add alliance selection v1 read stream
